--- a/src/app/front/partials/sidenav/left.component.html
+++ b/src/app/front/partials/sidenav/left.component.html
@@ -6,8 +6,8 @@
 		</h1>
 	</md-toolbar>
 
-	<!-- <md-list class="app-menu-mega">
-		<md-list-item ng-href="javascript:" ng-repeat="menu in ['Accessory','Jewelley','Shoes','Cosmetic','Handmade','Haute Couture','Horology','Lingerle','Wedding','Perfumery','Ready To Wear','Bag','Wax Clothe','All Categories']">
-			<p>{{menu}}</p>
+	<md-list>
+		<md-list-item *ngFor="let menuItem of menuItems">
+			<button md-button> {{ menuItem }} </button>
 		</md-list-item>
-	</md-list> -->
+	</md-list>
