--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,8 +21,25 @@ html, body {
 	height: 100%;
 }
 
+.color-primary {
+	background-color: mat-color($primary);
+}
+
+.logo {
+	margin-right: 10px;
+}
+
+left-sidenav .mat-list .mat-list-item .mat-list-item-content {
+	padding: 0px;
+	.mat-button {
+		width: 100%;
+		height: 100%;
+		text-align: left;
+	}
+}
+
 site-content .mat-sidenav-backdrop.mat-sidenav-shown {
-	background-color: rgba(0, 0, 0, 0.6);
+	background-color: rgba(30, 30, 30, 0.6);
 }
 
 site-content .mat-sidenav-container {
