--- a/src/app/front/partials/header/header.component.html
+++ b/src/app/front/partials/header/header.component.html
@@ -1,88 +1,54 @@
-<!-- <md-sidenav class="md-sidenav-right md-warn" md-component-id="right">
-    <form name="form" layout="column" class="md-padding">
-        <md-input-container md-theme="dark">
-            <label>Search</label>
-            <input mdInput required name="search" ng-model="vm.search">
-            <div ng-messages="form.search.$error">
-                <div ng-message="required">This is required.</div>
-            </div>
-        </md-input-container>
-        <button md-button><md-icon md-font-set="material-icons">search</md-icon> Search Product</button>
-    </form>
-    <md-list>
-        <md-list-item ng-href="javascript:">
-            <md-icon md-font-set="material-icons">description</md-icon>
-            <p>EMH Private Sale</p>
-        </md-list-item>
-        <md-list-item ng-href="javascript:">
-            <md-icon md-font-set="material-icons">public</md-icon>
-            <p>News</p>
-        </md-list-item>
-        <md-list-item ng-href="javascript:">
-            <md-icon md-font-set="material-icons">local_shipping</md-icon>
-            <p>Free Delivery</p>
-        </md-list-item>
-        <md-list-item ui-sref="login.index">
-            <md-icon md-font-set="material-icons">lock</md-icon>
-            <p>Login</p>
-        </md-list-item>
-        <md-list-item ui-sref="login.register">
-            <md-icon md-font-set="material-icons">person</md-icon>
-            <p>Sign Up</p>
-        </md-list-item>
-    </md-list>
-</md-sidenav> -->
-    <md-toolbar color="accent">
-        <button md-icon-button fxHide.md fxHide.lg (click)="openLeftSideNav()"><md-icon md-font-set="material-icons">menu</md-icon></button>
-    	<img style="max-width: 40%;" src="assets/img/logo.jpg" alt="">
-    	<div fxLayout="column" fxHide.sm fxHide.xs fxLayoutAlign="right">
-            <div fxLayout="row">
-                <button md-button>
-                    <md-icon md-font-set="material-icons">description</md-icon>
-                    EMH Private Sale
-                </button>
-                <button md-button>
-                    <md-icon md-font-set="material-icons">public</md-icon>
-                    News
-                </button>
-                <button md-button>
-                    <md-icon md-font-set="material-icons">local_shipping</md-icon>
-                    Free Delivery
-                </button>
-                <button md-button ui-sref="login.index">
-                    <md-icon md-font-set="material-icons">lock</md-icon>
-                    Login
-                </button>
-                <button md-button ui-sref="login.register">
-                    <md-icon md-font-set="material-icons">person</md-icon>
-                    Sign Up
-                </button>
-            </div>
-            <div fxLayout="row" fxLayoutAlign="end center">
-                <form name="form" class="search-form">
-                    <div fxLayout="row" fxLayoutAlign="end center">
-                    	<md-input-container md-theme="dark">
-                    		<input mdInput placeholder="Search*" [formControl]="searchControl">
-                    		<md-error *ngIf="searchControl.hasError('required')">
-                    			This is <strong> required </strong>
-                    		</md-error>
-                    	</md-input-container>
-                        <md-select placeholder="All Categories" floatPlaceholder="never">
-                            <md-option *ngFor="let category of categories" [value]="category.value">
-                                {{ category.viewValue }}
-                            </md-option>
-                        </md-select>
-                    	<button md-icon-button class="search-button"><md-icon md-font-set="material-icons">search</md-icon></button>
-                    </div>
-                </form>
-                <button md-button>
-                    <md-icon md-font-set="material-icons">local_grocery_store</md-icon>
-                    0 Item - 0.00$
-                </button>
-            </div>
+<md-toolbar color="accent">
+    <button md-icon-button fxHide.md fxHide.lg (click)="openLeftSidenav()"><md-icon md-font-set="material-icons">menu</md-icon></button>
+	<img style="max-width: 40%;" src="assets/img/logo.jpg" alt="">
+	<div fxLayout="column" fxHide.sm fxHide.xs fxLayoutAlign="right">
+        <div fxLayout="row">
+            <button md-button>
+                <md-icon md-font-set="material-icons">description</md-icon>
+                EMH Private Sale
+            </button>
+            <button md-button>
+                <md-icon md-font-set="material-icons">public</md-icon>
+                News
+            </button>
+            <button md-button>
+                <md-icon md-font-set="material-icons">local_shipping</md-icon>
+                Free Delivery
+            </button>
+            <button md-button ui-sref="login.index">
+                <md-icon md-font-set="material-icons">lock</md-icon>
+                Login
+            </button>
+            <button md-button ui-sref="login.register">
+                <md-icon md-font-set="material-icons">person</md-icon>
+                Sign Up
+            </button>
         </div>
-        <div fxLayout="row" fxHide.md fxHide.lg>
-            <button md-icon-button><md-icon md-font-set="material-icons">local_grocery_store</md-icon></button>
-            <button md-icon-button><md-icon md-font-set="material-icons">menu</md-icon></button>
+        <div fxLayout="row" fxLayoutAlign="end center">
+            <form name="form" class="search-form">
+                <div fxLayout="row" fxLayoutAlign="end center">
+                	<md-input-container md-theme="dark">
+                		<input mdInput placeholder="Search*" [formControl]="searchControl">
+                		<md-error *ngIf="searchControl.hasError('required')">
+                			This is <strong> required </strong>
+                		</md-error>
+                	</md-input-container>
+                    <md-select placeholder="All Categories" floatPlaceholder="never">
+                        <md-option *ngFor="let category of categories" [value]="category.value">
+                            {{ category.viewValue }}
+                        </md-option>
+                    </md-select>
+                	<button md-icon-button><md-icon md-font-set="material-icons">search</md-icon></button>
+                </div>
+            </form>
+            <button md-button>
+                <md-icon md-font-set="material-icons">local_grocery_store</md-icon>
+                0 Item - 0.00$
+            </button>
         </div>
-    </md-toolbar>
+    </div>
+    <div fxLayout="row" fxHide.md fxHide.lg>
+        <button md-icon-button><md-icon>local_grocery_store</md-icon></button>
+        <button md-icon-button><md-icon (click)="openRightSidenav()">menu</md-icon></button>
+    </div>
+</md-toolbar>
