--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,13 +12,11 @@ $theme: mat-dark-theme($primary, $accent, $warn);
 
 @include angular-material-theme($theme);
 
-body {
-	margin: 0;
-}
-
 html, body {
 	width: 100%;
 	height: 100%;
+	font-family: Roboto, "Helvetica Neue", sans-serif;
+	margin: 0;
 }
 
 .color-primary {
@@ -35,6 +33,49 @@ left-sidenav .mat-list .mat-list-item .mat-list-item-content {
 		width: 100%;
 		height: 100%;
 		text-align: left;
+	}
+}
+
+.mat-padding {
+	padding: 8px;
+}
+
+.mat-sidenav-end {
+	width: 320px;
+}
+
+right-sidenav {
+	form {
+		margin-bottom: 1em;
+	}
+
+	.mat-button {
+		color: rgba(0, 0, 0, 0.54);
+		font-size: 16px;
+	}
+
+	.mat-icon {
+		margin-right: 20px;
+	}
+
+	.mat-list .mat-list-item .mat-list-item-content {
+		padding: 0px;
+		.mat-button {
+			width: 100%;
+			height: 100%;
+			text-align: left;
+			p {
+				display: inline;
+			}
+		}
+	}
+
+	.mat-input-wrapper {
+		color: rgb(0, 191, 165);
+	}
+
+	md-input-container, md-select {
+		margin: 18px;
 	}
 }
 
