--- a/src/app/front/partials/sidenav/left.component.html
+++ b/src/app/front/partials/sidenav/left.component.html
@@ -8,6 +8,6 @@
 
 	<md-list>
 		<md-list-item *ngFor="let menuItem of menuItems">
-			<button md-button> {{ menuItem }} </button>
+			<button md-button class="full-size" fxLayout="row"> {{ menuItem }} </button>
 		</md-list-item>
 	</md-list>
