--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,17 +23,42 @@ html, body {
 	background-color: mat-color($primary);
 }
 
+.full-width {
+	width: 100%;
+}
+
+.full-height {
+	height: 100%;
+}
+
+.full-size {
+	width: 100%;
+	height: 100%;
+}
+
+.inline {
+	display: inline;
+}
+
 .logo {
 	margin-right: 10px;
 }
 
-left-sidenav .mat-list .mat-list-item .mat-list-item-content {
-	padding: 0px;
-	.mat-button {
-		width: 100%;
-		height: 100%;
-		text-align: left;
-	}
+left-sidenav, menu-mega {
+	.mat-list .mat-list-item .mat-list-item-content {
+		padding: 0px;
+		.mat-button-wrapper {
+			width: 100%;
+			display: flex;
+			align-items: center;
+			p {
+					display: inline;
+					flex: 1;
+					text-align: left;
+					margin: 0;
+			}
+		}
+	}	
 }
 
 .mat-padding {
@@ -42,6 +67,10 @@ left-sidenav .mat-list .mat-list-item .mat-list-item-content {
 
 .mat-sidenav-end {
 	width: 320px;
+}
+
+menu-mega .mat-list {
+	padding-top: 0px;
 }
 
 right-sidenav {
