--- a/src/app/front/pages/home/home.component.html
+++ b/src/app/front/pages/home/home.component.html
@@ -1,4 +1,6 @@
-<div fxLayout="row">
-	<menu-mega> </menu-mega>
-	<slideshow> </slideshow>
+<div fxLayout="column">
+	<div fxLayout="row">
+		<menu-mega> </menu-mega>
+		<slideshow> </slideshow>
+	</div>
 </div>
