--- a/src/styles.scss
+++ b/src/styles.scss
@@ -179,3 +179,43 @@ site-header .mat-toolbar-row {
 	justify-content: space-between;
 }
 
+slideshow {
+	flex: 1;
+	.mat-tab-group {
+		height: 100%;
+		.mat-tab-header {
+			position: absolute;
+			z-index: 2;
+			border: none;
+			.mat-ink-bar {
+				display: none;
+			}
+			.mat-tab-label {
+			    width: 15px;
+			    height: 15px;
+			    padding: 0px;
+			    border: none;
+			    min-width: 15px;
+			    border-radius: 15px;
+			    min-height: 15px;
+			    background-color: #000;
+			    opacity: 0.6;
+			    margin: 30px 10px;
+			}
+			.mat-tab-label[aria-selected="true"] {
+				opacity: 1;
+			}
+		}
+		.mat-tab-body-wrapper {
+			width: 100%;
+			height: 100%;
+		}
+	}
+	.slideshow-image {
+		width: 100%;
+		height: 100%;
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-position: 50% 50%;
+	}
+}
