Slideshow mobile responsive issue fix:

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -181,6 +181,7 @@ site-header .mat-toolbar-row {
 
 slideshow {
 	flex: 1;
+	min-height: 400px;
 	.mat-tab-group {
 		height: 100%;
 		.mat-tab-header {
