Store filter complete

--- a/src/app/front/pages/home/home.component.html
+++ b/src/app/front/pages/home/home.component.html
@@ -3,4 +3,7 @@
 		<menu-mega> </menu-mega>
 		<slideshow> </slideshow>
 	</div>
+	<div fxLayout="column">
+		<store-filter> </store-filter>
+	</div>
 </div>
