--- a/src/app/front/partials/menu-mega/menu-mega.component.html
+++ b/src/app/front/partials/menu-mega/menu-mega.component.html
@@ -1,129 +1,57 @@
 <md-list fxHide.xs fxHide.sm>
     <md-list-item *ngFor="let menuItem of menuItems" class="color-primary">
-        <button md-button fxLayout="row" class="full-size" [mdMenuTriggerFor]="appMenu"> <p class="inline"> {{ menuItem }} </p> <md-icon>keyboard_arrow_right</md-icon> </button>
+        <button md-button fxLayout="row" class="full-size" xOffset="100" [mdMenuTriggerFor]="appMenu"> <p class="inline"> {{ menuItem }} </p> <md-icon>keyboard_arrow_right</md-icon> </button>
         <md-menu #appMenu="mdMenu" xPosition="after">
-            <!-- <md-menu-item> -->
-                <div fxLayout="column">
-                    <div fxLayout="row">
-                        <div style="min-width: 300px;">
-                            <md-toolbar fxLayout="row">
-                                <img src="assets/img/profile.jpg">
-                                <span> Men </span>
-                            </md-toolbar>
-                            <md-list>
-                                <md-list-item *ngFor="let item of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]">
-                                    <button md-button> Children Sub category {{ item }} </button>
-                                </md-list-item>
-                            </md-list>
-                        </div>
-                        <div style="min-width: 300px;">
-                            <md-toolbar fxLayout="row">
-                                <img src="assets/img/profile.jpg">
-                                <span> Women </span>
-                            </md-toolbar>
-                            <md-list>
-                                <md-list-item *ngFor="let item of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]">
-                                    <button md-button> Children Sub category {{ item }} </button>
-                                </md-list-item>
-                            </md-list>
-                        </div>
+            <div fxLayout="column">
+                <div fxLayout="row">
+                    <div style="min-width: 300px;">
+                        <md-toolbar fxLayout="row">
+                            <img src="assets/img/profile.jpg">
+                            <span> Men </span>
+                        </md-toolbar>
+                        <md-list>
+                            <md-list-item *ngFor="let item of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]">
+                                <button md-button> Children Sub category {{ item }} </button>
+                            </md-list-item>
+                        </md-list>
                     </div>
-                    <div fxLayout="row">
-                        <div style="min-width: 300px;">
-                            <md-toolbar fxLayout="row">
-                                <img src="assets/img/profile.jpg">
-                                <span> Children </span>
-                            </md-toolbar>
-                            <md-list>
-                                <md-list-item *ngFor="let item of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]">
-                                    <button md-button> Children Sub category {{ item }} </button>
-                                </md-list-item>
-                            </md-list>
-                        </div>
-                        <div style="min-width: 300px;">
-                            <md-toolbar fxLayout="row">
-                                <img src="assets/img/profile.jpg">
-                                <span> Babies </span>
-                            </md-toolbar>
-                            <md-list>
-                                <md-list-item *ngFor="let item of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]">
-                                    <button md-button> Children Sub category {{ item }} </button>
-                                </md-list-item>
-                            </md-list>
-                        </div>
+                    <div style="min-width: 300px;">
+                        <md-toolbar fxLayout="row">
+                            <img src="assets/img/profile.jpg">
+                            <span> Women </span>
+                        </md-toolbar>
+                        <md-list>
+                            <md-list-item *ngFor="let item of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]">
+                                <button md-button> Children Sub category {{ item }} </button>
+                            </md-list-item>
+                        </md-list>
                     </div>
                 </div>
-            <!-- </md-menu-item> -->
-            <!-- <button md-menu-item> Settings </button>
-            <button md-menu-item> Help </button> -->
+                <div fxLayout="row">
+                    <div style="min-width: 300px;">
+                        <md-toolbar fxLayout="row">
+                            <img src="assets/img/profile.jpg">
+                            <span> Children </span>
+                        </md-toolbar>
+                        <md-list>
+                            <md-list-item *ngFor="let item of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]">
+                                <button md-button> Children Sub category {{ item }} </button>
+                            </md-list-item>
+                        </md-list>
+                    </div>
+                    <div style="min-width: 300px;">
+                        <md-toolbar fxLayout="row">
+                            <img src="assets/img/profile.jpg">
+                            <span> Babies </span>
+                        </md-toolbar>
+                        <md-list>
+                            <md-list-item *ngFor="let item of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]">
+                                <button md-button> Children Sub category {{ item }} </button>
+                            </md-list-item>
+                        </md-list>
+                    </div>
+                </div>
+            </div>
         </md-menu>
     </md-list-item>
 </md-list>
-<!-- <md-list class="app-menu-mega" hide-xs hide-sm>
-    <md-list-item ng-repeat="menu in ['Accessory','Jewelley','Shoes','Cosmetic','Handmade','Haute Couture','Horology','Lingerle','Wedding','Perfumery','Ready To Wear','Bag','Wax Clothe','All Categories']">
-        <p>{{menu}}</p>
-        <md-menu class="md-secondary" md-position-mode="cascade">
-            <md-button class="md-icon-button">
-                <md-icon class="logo" md-font-set="material-icons">keyboard_arrow_right</md-icon>
-            </md-button>
-            <md-menu-content width="6" class="menu-mega">
-                <md-menu-item>
-                    <div layout="column" flex>
-                        <md-toolbar layout="row" >
-                            <div class="md-toolbar-tools">
-                                <img ng-src="img/profile.jpg" class="md-avatar" alt="" />
-                                <span>Sub Category 1</span>
-                            </div>
-                        </md-toolbar>
-                        <md-list>
-                            <md-list-item ng-repeat="item in [1,2,3,4,5,6,7,8,9,10]" ng-click="console.log(item)">
-                                Children sub category {{item}}
-                            </md-list-item>
-                        </md-list>
-                    </div>
-                    <div layout="column" flex>
-                        <md-toolbar layout="row" >
-                            <div class="md-toolbar-tools">
-                                <img ng-src="img/profile.jpg" class="md-avatar" alt="" />
-                                <span>Sub Category 2</span>
-                            </div>
-                        </md-toolbar>
-                        <md-list>
-                            <md-list-item ng-repeat="item in [1,2,3,4,5,6,7,8,9,10]" ng-click="console.log(item)">
-                                Children sub category {{item}}
-                            </md-list-item>
-                        </md-list>
-                    </div>
-                </md-menu-item>
-                <md-menu-item>
-                    <div layout="column" flex>
-                        <md-toolbar layout="row" >
-                            <div class="md-toolbar-tools">
-                                <img ng-src="img/profile.jpg" class="md-avatar" alt="" />
-                                <span>Sub Category 3</span>
-                            </div>
-                        </md-toolbar>
-                        <md-list>
-                            <md-list-item ng-repeat="item in [1,2,3,4,5,6,7,8,9,10]" ng-click="console.log(item)">
-                                Children sub category {{item}}
-                            </md-list-item>
-                        </md-list>
-                    </div>
-                    <div layout="column" flex>
-                        <md-toolbar layout="row" >
-                            <div class="md-toolbar-tools">
-                                <img ng-src="img/profile.jpg" class="md-avatar" alt="" />
-                                <span>Sub Category 4</span>
-                            </div>
-                        </md-toolbar>
-                        <md-list>
-                            <md-list-item ng-repeat="item in [1,2,3,4,5,6,7,8,9,10]" ng-click="console.log(item)">
-                                Children sub category {{item}}
-                            </md-list-item>
-                        </md-list>
-                    </div>
-                </md-menu-item>
-            </md-menu-content>
-        </md-menu>
-    </md-list-item>
-</md-list> -->
