--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
 @include mat-core();
 
 $primary: mat-palette($mat-teal);
+$primary-text: mat-palette($mat-teal, 50);
 $accent: mat-palette($mat-grey, 1000);
 $warn: mat-palette($mat-red);
 
@@ -19,45 +20,9 @@ html, body {
 	margin: 0;
 }
 
-.cdk-overlay-pane {
-	margin-left: 200px;
-	top: 80px !important;
-	.mat-menu-panel {
-		max-width: initial;
-		.mat-menu-content {
-			padding: 16px 0px;
-			background-color: #efefef;
-			div > div > div {
-				padding: 0px 16px;
-			}
-			img {
-				width: 35px;
-				margin-right: 20px;
-				border-radius: 50%;
-			}
-			.mat-list-item-content {
-				padding: 0px;
-				height: 30px;
-				.mat-button {
-					color: rgba(0, 0, 0, 0.87);
-					width: 100%;
-					text-align: left;
-				}
-			}
-			.mat-toolbar {
-				background-color: #ccc;
-				color: rgba(0, 0, 0, 0.87);
-				min-height: 50px;
-				.mat-toolbar-row {
-					height: 50px;
-				}
-			}
-		}
-	}
-}
-
 .color-primary {
 	background-color: mat-color($primary);
+	color: mat-color($primary-text);
 }
 
 .full-width {
@@ -93,6 +58,44 @@ left-sidenav, menu-mega {
 					flex: 1;
 					text-align: left;
 					margin: 0;
+			}
+		}
+	}	
+}
+
+.cdk-overlay-pane {
+	.mat-menu-panel {
+		top: 80px;
+		position: fixed;
+		margin-left: 200px;
+		max-width: initial;
+		.mat-menu-content {
+			padding: 16px 0px;
+			background-color: #efefef;
+			div > div > div {
+				padding: 0px 16px;
+			}
+			img {
+				width: 35px;
+				margin-right: 20px;
+				border-radius: 50%;
+			}
+			.mat-list-item-content {
+				padding: 0px;
+				height: 30px;
+				.mat-button {
+					color: rgba(0, 0, 0, 0.87);
+					width: 100%;
+					text-align: left;
+				}
+			}
+			.mat-toolbar {
+				background-color: #ccc;
+				color: rgba(0, 0, 0, 0.87);
+				min-height: 50px;
+				.mat-toolbar-row {
+					height: 50px;
+				}
 			}
 		}
 	}	
