Store list complete

--- a/src/app/front/pages/home/home.component.html
+++ b/src/app/front/pages/home/home.component.html
@@ -3,7 +3,8 @@
 		<menu-mega> </menu-mega>
 		<slideshow> </slideshow>
 	</div>
-	<div fxLayout="column">
+	<div fxLayout="column" style="padding: 10px;">
 		<store-filter> </store-filter>
+		<store-grid> </store-grid>
 	</div>
 </div>
