--- a/src/styles.scss
+++ b/src/styles.scss
@@ -223,3 +223,75 @@ slideshow {
 		background-position: 50% 50%;
 	}
 }
+
+store-grid .mat-tab-group .mat-tab-body-wrapper {
+	width: 100%;
+}
+
+store-grid {
+	.mat-tab-group {
+		.mat-tab-body-wrapper {
+			width: 100%;
+			box-shadow: 0px 0px 5px #000000;
+			padding: 10px;
+		}
+		.mat-tab-header {
+			.mat-ink-bar {
+				display: none;
+			}
+		}
+		.mat-tab-label {
+			width: 50px;
+			height: 50px;
+			padding: 0px;
+			border-radius: 50%;
+			background-color: rgba(0, 0, 0, 0.54);
+			margin: 10px;
+			min-width: initial;
+			opacity: 1;
+			color: rgba(0, 0, 0, 0.87);
+		}
+		.mat-tab-label[aria-selected="true"] {
+			background-color: mat-color($primary);
+			color: #fff;
+		}
+		.mat-tab-header-pagination {
+			display: block;
+			margin-top: 27px;
+			margin-left: 15px;
+			div {
+				border-color: rgba(0, 0, 0, 0.87);
+			}
+		}
+		.mat-tab-header-pagination-before {
+			margin-top: 29px;
+		}
+	}
+}
+
+/*.mat-tab-group {
+	.mat-tab-header {
+		.mat-ink-bar {
+			display: none;
+		}
+		.mat-tab-label {
+		    width: 15px;
+		    height: 15px;
+		    padding: 0px;
+		    border: none;
+		    min-width: 15px;
+		    border-radius: 15px;
+		    min-height: 15px;
+		    background-color: #000;
+		    opacity: 0.6;
+		    margin: 30px 10px;
+		}
+		.mat-tab-label[aria-selected="true"] {
+			opacity: 1;
+		}
+	}
+	.mat-tab-body-wrapper {
+		width: 100%;
+		height: 100%;
+	}
+}*/
