--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,7 @@ $primary: mat-palette($mat-teal);
 $primary-text: mat-palette($mat-teal, 50);
 $accent: mat-palette($mat-grey, 1000);
 $warn: mat-palette($mat-red);
+$accent-reverse: mat-palette($mat-grey, 0);
 
 $theme: mat-dark-theme($primary, $accent, $warn);
 
@@ -23,6 +24,21 @@ html, body {
 .color-primary {
 	background-color: mat-color($primary);
 	color: mat-color($primary-text);
+}
+
+.color-primary-accent {
+	background-color: mat-color($primary);
+	color: mat-color($accent);
+}
+
+.color-accent {
+	background-color: mat-color($accent);
+	color: mat-color($accent-reverse);
+}
+
+.color-accent-reverse {
+	background-color: mat-color($accent-reverse);
+	color: mat-color($accent) !important;
 }
 
 .full-width {
@@ -269,29 +285,6 @@ store-grid {
 	}
 }
 
-/*.mat-tab-group {
-	.mat-tab-header {
-		.mat-ink-bar {
-			display: none;
-		}
-		.mat-tab-label {
-		    width: 15px;
-		    height: 15px;
-		    padding: 0px;
-		    border: none;
-		    min-width: 15px;
-		    border-radius: 15px;
-		    min-height: 15px;
-		    background-color: #000;
-		    opacity: 0.6;
-		    margin: 30px 10px;
-		}
-		.mat-tab-label[aria-selected="true"] {
-			opacity: 1;
-		}
-	}
-	.mat-tab-body-wrapper {
-		width: 100%;
-		height: 100%;
-	}
-}*/
+site-footer .mat-list .mat-list-item .mat-list-item-content {
+	color: #000;
+}
