Footer complete, first page complete

--- a/src/app/front/partials/footer/footer.component.html
+++ b/src/app/front/partials/footer/footer.component.html
@@ -172,3 +172,10 @@
 <ngx-slick class="carousel" [config]="slideConfig" class="color-primary">
     <div ngxSlickItem *ngFor="let i of [1, 2, 3, 4, 5, 6]"> <img src="assets/img/partner.png" width="100%"> </div>
 </ngx-slick>
+
+<div class="color-primary-accent">www.equalitymodehouse.com is the first online shopping mail and fully dedicated to fashion</div>
+<div class="color-primary-accent">ở đây thêm cái đồng hồ lấy log giờ server</div>
+
+<md-toolbar class="color-accent">
+    <h3 class="color-accent"> Copyrights <md-icon>copyright</md-icon> Economics 2017. All Right Reserved. </h3>
+</md-toolbar>
