Collaboration panel fixed

--- a/src/app/front/partials/colloboration-panel/colloboration-panel.component.html
+++ b/src/app/front/partials/colloboration-panel/colloboration-panel.component.html
@@ -1,1 +1,3 @@
-<button md-button style="color: #009688"> Westfield London </button>
+<ngx-slick class="carousel" [config]="slideConfig">
+    <div ngxSlickItem *ngFor="let i of [1, 2, 3, 4, 5, 6]"> <img src="assets/img/partner.png" width="100%"> </div>
+</ngx-slick>
