Separated components from footer

--- a/src/app/front/pages/home/home.component.html
+++ b/src/app/front/pages/home/home.component.html
@@ -7,5 +7,7 @@
 		<store-filter> </store-filter>
 		<store-grid> </store-grid>
 	</div>
-	<colloboration-panel> </colloboration-panel>
+	<collaboration-panel> </collaboration-panel>
+	<action-panel> </action-panel>
+	<partner-panel> </partner-panel>
 </div>
